--- a/Android/WebView/app/src/main/AndroidManifest.xml
+++ b/Android/WebView/app/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright 2019 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All Rights Reserved.
+  ~
+  ~  By using this code you agree to the Phenix Terms of Service found online here:
+  ~  http://phenixrts.com/terms-of-service.html
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.phenixrts.examples.webview">
 
