--- a/Android/ChannelViewer/build.gradle
+++ b/Android/ChannelViewer/build.gradle
@@ -1,3 +1,10 @@
+/*
+ * Copyright 2019 Phenix Real Time Solutions, Inc. Confidential and Proprietary. All Rights Reserved.
+ *
+ * By using this code you agree to the Phenix Terms of Service found online here:
+ * http://phenixrts.com/terms-of-service.html
+ */
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -7,7 +14,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
