--- a/Android/ChannelPublisher/app/src/main/AndroidManifest.xml
+++ b/Android/ChannelPublisher/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="com.phenixrts.demo.simpledemoapps.subsciber">
+  package="com.phenixrts.demo.simpledemoapps.publisher">
 
   <application
     android:allowBackup="false"
@@ -21,7 +21,7 @@
     <!-- It is recommended to prevent activity with video player from being recreated to keep playback smooth -->
     <activity
       android:configChanges="orientation|keyboard|screenSize"
-      android:name=".SubscribeActivity">
+      android:name=".PublishActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
