--- a/Android/WebView/.gitignore
+++ b/Android/WebView/.gitignore
@@ -1,11 +1,8 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/.idea/caches
+/.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/.idea/vcs.xml
