--- a/Android/WebView/app/src/main/AndroidManifest.xml
+++ b/Android/WebView/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.phenixrts.examples.webview">
+  xmlns:tools="http://schemas.android.com/tools"
+  package="com.phenixrts.examples.webview">
 
   <uses-permission android:name="android.permission.INTERNET">
   </uses-permission>
@@ -19,18 +20,19 @@
   </uses-permission>
 
   <application
-      android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/AppTheme"
+    tools:ignore="GoogleAppIndexingWarning">
     <activity
+      android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
       android:name="com.phenixrts.examples.webview.MainActivity"
-      android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation">
+      android:windowSoftInputMode="stateAlwaysHidden">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
